--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "https://github.com/Lakinator",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/builders": "^0.6.0",
+    "@discordjs/rest": "^0.1.0-canary.0",
+    "axios": "^0.21.1",
+    "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0"
   }
 }
